fix: refactor on ToolBox